<resources>
    <string name="app_name">DNNR</string>
    <string name="favorite">favorite</string>
    <string name="profile">profile</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="bluetooth">Bluetooth</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="start_group">Start Group</string>
    <string name="join_group">Join group</string>
    <string name="or_sign_in">or sign in</string>
    <string name="username">Username</string>
    <string name="user_settings">User settings</string>
    <string name="d">D</string>
    <string name="n">N</string>
    <string name="r">R</string>
    <string name="user">user</string>
    <string name="sign_out">Sign out</string>
    <string name="placeholder">-placeholder-</string>
    <string name="start">Start</string>
    <string name="connect">connect</string>
    <string name="group_setup">Group setup</string>
    <string name="allergies">Allergies</string>
    <string name="preferences">Preferences</string>
    <string name="filters">Filters</string>
    <string name="participants">Participants</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="matched_recipe">Matched Recipe</string>

</resources>