<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_BT"
            android:icon="@drawable/ic_baseline_bluetooth_24"
            android:title="@string/bluetooth"/>
    </group>

    <item android:title="@string/user_settings"
        android:icon="@drawable/ic_baseline_person_24">
        <menu>
            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/ic_round_settings_24"
                android:title="@string/settings"/>
        </menu>
    </item>

    <item android:id="@+id/drawer_signout"
        android:icon="@drawable/ic_round_exit_to_app_24"
        android:title="@string/sign_out" />
</menu>