<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:src="@drawable/backdrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/group_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="96dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/group_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="96dp"
        android:text="@string/fui_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/group_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:backgroundTint="@color/BT_Blue"
        android:layout_marginBottom="176dp"
        app:icon="@drawable/ic_baseline_bluetooth_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/group_participants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/placeholder"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_participants_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/group_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_setup"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/group_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_title"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/group_switch_allergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergies"
        app:layout_constraintBaseline_toBaselineOf="@id/group_switch_prefs"
        app:layout_constraintEnd_toStartOf="@id/group_switch_prefs"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/group_switch_prefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/group_filter"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/group_participants_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_filter"/>

</androidx.constraintlayout.widget.ConstraintLayout>